# rust-playground

./: Cargo.toml
adder/src/: lib.rs
collection/: Cargo.toml
collection/src/: main.rs
docs/: setup.md  tools.md  troubleshoot.md
fra/samplecli/: Cargo.toml  input.txt
fra/samplecli/src/: main.rs
guessing_game/src/: main.rs
headless-chrome/: Cargo.toml
headless-chrome/src/: main.rs
largest-number/: Cargo.toml
largest-number/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/: Cargo.toml  doc.md
ownership/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
rsgrep/src/: main.rs
rust-books/: README.md
rust-books/guessing_game/: Cargo.toml
rust-books/guessing_game/src/: main.rs
samplecli/: Cargo.toml
samplecli/src/: main.rs
sampleweb/: Cargo.toml
sampleweb/src/: main.rs
src/: main.rs
variables/: Cargo.toml  doc.md
variables/src/: main.rs
