[package]
name = "samplecli"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#comparison-requirements
clap = "=3.0.0-beta.2"
